updated admin and products pages
